# tt_frontend

./: main.py  pyproject.toml
app/: config.py  main.py  request.py  styles.py
deploy/docker/: Dockerfile  docker-compose.yml
deploy/entrypoints/: start_app.sh
