[tool.poetry]
name = "test_task"
version = "1.0"
description = ""
authors = ["NeoIsALie"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.3.1"
pandas = "^1.4.2"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

